# EmotionAI

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  create_directories.sh  docker-compose.yml  emotiefflib.patch  gunicorn_config.py  install_deps.sh  main.cpp  pyproject.toml  requirements.txt  run.py  server.py  wsgi.py
.github/workflows/: ci.yml  make.yml
config/: README.md  config_all.yaml  config_simple.yaml  config_single_local.yaml  config_single_s3.yaml  nginx  service  settings.py
contrib/: CMakeLists.txt
docker/: README.md  docker-compose-all.yaml  docker-compose-distributed.yml  docker-compose-replicas.yml  docker-compose-single-local.yml  docker-compose-single-s3.yml  docker-compose-single.yml
emotiefflib/: README.md  facial_analysis.py
frontend/: babel.config.js  package-lock.json  package.json  webpack.config.js
frontend/public/: index.html  privacy-policy.html
frontend/src/: App.js
frontend/src/components/: ApplicationModal.js  Contact.js  CookieConsent.js  Detector.css  Detector.js  Features.js  Footer.js  Header.js  Home.js  Privacy.js
frontend/src/hooks/: useLanguage.js  useNavigation.js
frontend/src/styles/: styles.css
frontend/src/utils/: emotionColors.js  translations.js
models/face/: face_norm_scalar.pkl
monitoring/: prometheus.yml
nginx/: nginx.conf
src/: README.md  app.py  train.py  train_faces_torch.py
src/client/: Client.cpp  Client.h
src/cluster/: ClusterManager.cpp  ClusterManager.h  DistributedTaskManager.cpp  DistributedTaskManager.h
src/common/: Config.cpp  Config.h  Logging.cpp  Logging.h  base64.cpp
src/config/: Config.cpp  Config.h
src/db/: DragonflyManager.cpp  DragonflyManager.h  RedisManager.cpp  RedisManager.h  TaskBatcher.cpp  TaskBatcher.h  TaskManager.cpp  TaskManager.h
src/emotion_detection_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/emotionai/: FileProcessor.cpp  FileProcessor.h  Image.cpp  Image.h
src/gigachat/: GigaChatClient.cpp  GigaChatClient.h
src/logging/: Logger.cpp  Logger.h
src/metrics/: MetricsCollector.cpp  MetricsCollector.h  MetricsMiddleware.cpp  MetricsMiddleware.h
src/models/: file_processor.py  redis_manager.py
src/mtcnn/: detector.cc  detector.h  face.h  helpers.h  onet.cc  pnet.cc  rnet.cc  rnet.h
src/routes/: api.py  frontend.py
src/server/: BaseServer.cpp  BaseServer.h  IServer.h  MultiplexingServer.cpp  MultiplexingServer.h  ServerFactory.cpp  ServerFactory.h  ThreadPool.cpp  ThreadPool.h  WebServer.cpp  WebServer.h
src/source/: config.py
src/source/audio_analysis_utils/: predict.py  utils.py
src/source/whisper/whisper/: __main__.py
src/storage/: FileStorage.h  FileStorageFactory.cpp  FileStorageFactory.h  LocalFileStorage.cpp  LocalFileStorage.h  NFSFileStorage.cpp  NFSFileStorage.h  S3FileStorage.cpp  S3FileStorage.h
src/training/: process_images.py  train_multitask.py
src/vafer/face_emotion_utils/: predict.py
static/: privacy-policy.html  styles.css
static/js/: content-loaders.js  detector.js  main.js  rate-limit-handler.js
templates/: 500.html  contact.html  detector.html  index.html  index1.html  landing.html  morda.html  privacy_policy.html
tests/: CMakeLists.txt  README.md  main.cpp  simple_test.cpp
tests/benchmark/: BenchmarkConfig.h  CMakeLists.txt  ConcurrentClientBenchmark.cpp  EmotionServerBenchmark.cpp  EmotionServerBenchmark.h  LoadTestBenchmark.cpp  README.md  ServerBenchmark.cpp  main.cpp
tests/configs/: e2e_config.yaml  integration_config.yaml  unit_config.yaml
tests/integration/: BasicIntegrationTest.cpp
tests/integration/end_to_end/: FileUploadTest.cpp
tests/integration/server/: ServerIntegrationTest.cpp
tests/mocks/: MockEmotiEffLib.h  MockFileProcessor.h
tests/unit/common/: ConfigTest.cpp  LoggingTest.cpp
tests/unit/config/: ConfigTest.cpp
tests/unit/db/: RedisManagerTest.cpp
tests/unit/emotionai/: FileProcessorTest.cpp  ImageTest.cpp
tests/unit/logging/: LoggerTest.cpp
tests/unit/server/: WebServerTest.cpp
tests/utils/: TestUtils.cpp  TestUtils.h
training/: README.md  create_train_tsv.py  process_images.py  test.tsv  train_multitask.py
