[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emotion-detection-app"
version = "1.0.0"
description = "Emotion detection application using facial analysis"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "flask==2.3.3",
    "flask-cors==4.0.0",
    "flask-limiter==3.5.0",
    "redis==5.0.1",
    "opencv-python==4.8.1.78",
    "numpy==1.26.0",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "torchvision==0.23.0",
    "facenet-pytorch==2.5.3",
    "emotiefflib==1.0",
    "pyyaml==6.0.1",
    "werkzeug==2.3.7",
    "gunicorn==21.2.0",
    "gevent==25.5.1",
    "tensorflow==2.16.1",
    "tf2onnx==1.16.1",
    "protobuf==3.20.3",
    "timm==0.9.16"
]
requires-python = ">=3.7"

[tool.setuptools]
packages = {find = {where = ["src"]}}
package-dir = {"" = "src"}

[project.scripts]
emotion-detection = "src.app:main"
